# Multi-Agent-System-with-CrewAI

./: README.md
blog_generation_crew/: README.md  pyproject.toml
blog_generation_crew/blogs/: blog.md
blog_generation_crew/src/blog_generation_crew/: crew.py  main.py
blog_generation_crew/src/blog_generation_crew/config/: agents.yaml  tasks.yaml
knowledge_crew/: README.md  pyproject.toml
knowledge_crew/response/: output.md
knowledge_crew/src/knowledge_crew/: crew.py  main.py
knowledge_crew/src/knowledge_crew/config/: agents.yaml  tasks.yaml
news_report_crew/: README.md  news.json  pyproject.toml
news_report_crew/src/news_report_crew/: crew.py  main.py
news_report_crew/src/news_report_crew/config/: agents.yaml  tasks.yaml
report_summarization_crew/: .gitignore  README.md  pyproject.toml
report_summarization_crew/reports/: report.md  report_new.md  report_summary.md  report_summary_new.md
report_summarization_crew/src/report_summarization_crew/: crew.py  main.py
report_summarization_crew/src/report_summarization_crew/config/: agents.yaml  tasks.yaml
