[project]
name = "blog_generation_crew"
version = "0.1.0"
description = "blog-generation-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
blog_generation_crew = "blog_generation_crew.main:run"
run_crew = "blog_generation_crew.main:run"
train = "blog_generation_crew.main:train"
replay = "blog_generation_crew.main:replay"
test = "blog_generation_crew.main:test"
run_with_trigger = "blog_generation_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
