[project]
name = "knowledge_crew"
version = "0.1.0"
description = "knowledge-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
knowledge_crew = "knowledge_crew.main:run"
run_crew = "knowledge_crew.main:run"
train = "knowledge_crew.main:train"
replay = "knowledge_crew.main:replay"
test = "knowledge_crew.main:test"
run_with_trigger = "knowledge_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
