[project]
name = "news_report_crew"
version = "0.1.0"
description = "news-report-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
news_report_crew = "news_report_crew.main:run"
run_crew = "news_report_crew.main:run"
train = "news_report_crew.main:train"
replay = "news_report_crew.main:replay"
test = "news_report_crew.main:test"
run_with_trigger = "news_report_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
