[project]
name = "report_summarization_crew"
version = "0.1.0"
description = "report-summarization-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
report_summarization_crew = "report_summarization_crew.main:run"
run_crew = "report_summarization_crew.main:run"
train = "report_summarization_crew.main:train"
replay = "report_summarization_crew.main:replay"
test = "report_summarization_crew.main:test"
run_with_trigger = "report_summarization_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
